--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/sabrinaluo/DQICAw8ADQcJBgIMBAEAAg/issues"
   },
-  "homepage": "https://github.com/sabrinaluo/DQICAw8ADQcJBgIMBAEAAg#readme"
+  "homepage": "https://github.com/sabrinaluo/DQICAw8ADQcJBgIMBAEAAg#readme",
+  "devDependencies": {
+    "eslint": "^2.9.0",
+    "eslint-config-aftership": "^2.3.3",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-load-plugins": "^1.2.2"
+  }
 }
