--- a/package.json
+++ b/package.json
@@ -17,10 +17,19 @@
   },
   "homepage": "https://github.com/sabrinaluo/DQICAw8ADQcJBgIMBAEAAg#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^2.9.0",
     "eslint-config-aftership": "^2.3.3",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
-    "gulp-load-plugins": "^1.2.2"
+    "gulp-load-plugins": "^1.2.2",
+    "mocha": "^2.4.5",
+    "rewire": "^2.5.1"
+  },
+  "dependencies": {
+    "bluebird": "^3.3.5",
+    "bunyan": "^1.8.1",
+    "co": "^4.6.0",
+    "nconf": "^0.8.4"
   }
 }
