--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bluebird": "^3.3.5",
     "bunyan": "^1.8.1",
     "co": "^4.6.0",
+    "mongoose": "^4.4.16",
     "nconf": "^0.8.4"
   }
 }
