--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a beanstalkd exchange rate worker",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "cov": "istanbul cover _mocha -- --opts ./test/mocha.opts",
+    "start": "node index.js | bunyan -o short"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-load-plugins": "^1.2.2",
+    "istanbul": "1.0.0-alpha.2",
     "mocha": "^2.4.5",
     "rewire": "^2.5.1"
   },
@@ -35,6 +38,7 @@
     "fivebeans": "^1.4.0",
     "mongoose": "^4.4.16",
     "nconf": "^0.8.4",
+    "request": "^2.72.0",
     "shortid": "^2.2.6"
   }
 }
